--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
   </head>
     <body>
       <h1>Odin Recipes</h1>
+      <a href="recipes/bbq-chicken.html">Barbecue Chicken 
+        Recipe
+      </a>
     </body>
 </html>
