--- a/recipes/bbq-chicken.html
+++ b/recipes/bbq-chicken.html
@@ -9,7 +9,46 @@
   <body>
     <h1>BBQ Chicken</h1>
 
-    <img src="../img/bbqchicken.jpg" alt="Delicious BBQ
-    Chicken">
+    <img src="../img/bbqchicken.jpg" alt="Holy shit this is
+    one big ass image">
+    
+    <h2>Description</h2>
+    <p>A not-too-sweet, not-too-tangy barbecue sauce that
+      everyone loves. Finishes in almost a glaze and would
+      also be great on pork chops or ribs.
+    </p>
+
+    <h3>Ingredients:</h3>
+    <ul>
+      <li>1 1/2 tablespoons of olive oil</li>
+      <li>1/4 cup diced onion</li>
+      <li>2 gloves garlic, minced</li>
+      <li>5 tablespoons ketchup</li>
+      <li>3 tablespoons honey</li>
+      <li>3 tablespoons brown sugar</li>
+      <li>2 tablespoons apple cider vinegar</li>
+      <li>1 tablespoon Worcestershire sauce</li>
+      <li>salt and pepper to taste</li>
+      <li>skinless, boneless chicken breast halves</li>
+    </ul>
+
+    <h3>Steps:</h3>
+    <ol>
+      <li>Preheat grill for medium-high heat</li>
+      <li>Heat olive oil in a skillet over medium heat. 
+        Saute onion and garlic until tender. Stir in 
+        ketchup, honey, brown sugar, apple cider vinegar,
+        Worcestershire sauce, salt, and pepper. Cook for 
+        a few minutes to thicken sauce. Remove from heat,
+        and allow to cool.
+      </li>
+      <li>Lightly oilthe grate. Dip chicken in sauce,
+        and turn to coat. Cook on grill for 10 to 15
+        minutes, turning once. Move chicken to the skillet
+        with sauce. Simmer over medium heat for about
+        5 minutes on each side.
+      </li>
+    </ol>
+
   </body>
 </html>
