--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
   </head>
     <body>
       <h1>Odin Recipes</h1>
-      <a href="recipes/bbq-chicken.html">Barbecue Chicken 
-        Recipe
-      </a>
+
+      <ul>
+        <li><a href="recipes/bbq-chicken.html">Barbecue Chicken 
+        </a></li>
+        <li><a href="recipes/bacon-risotto.html">Bacon
+          Risotto
+        </a></li>
+        <li><a href="recipes/lemon-pie.html">Lemon Pie</a></li>
+      </ul>
     </body>
 </html>
